# Api_Gerenciador_tarefas

./: README.md  alembic.ini  meu_ip_local.py  pyproject.toml
alembic/: env.py
src/api_gerenciador_tarefas/: app.py  criar_tabelas.py
src/api_gerenciador_tarefas/database/: connection.py
src/api_gerenciador_tarefas/models/: task.py  user_schema.py
src/api_gerenciador_tarefas/routers/: tarefas_routers.py
src/api_gerenciador_tarefas/schemas/: task_schemas.py
tests/: conftest.py  test_app.py  test_db.py
